[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "object-ci"
version = "0.1.0"
description = "Personal CI/CD helpers"
classifiers = ["Private :: Do Not Upload"]
requires-python = ">= 3.11"
dependencies = []

[project.optional-dependencies]
aws-cdk = [
    "aws-cdk-lib>=2.148.0",
    "aws-cdk-github-oidc>=2.4.1",
]
cdktf = [
    "cdktf>=0.20.8",
    "cdktf-cdktf-provider-cloudflare>=11.14.0",
]

[tool.rye]
managed = true
dev-dependencies = [
    "ruff>=0.11.2",
    "pre-commit",
    "pytest>=8.2.2",
    "nox>=2024.4.15",
]

[tool.rye.workspace]
members = [
    "infrastructure",
]

[tool.rye.scripts]
setup = { chain = ["setup:sync", "setup:pre-commit"] }
"setup:sync" = "rye sync --all-features"
"setup:pre-commit" = "pre-commit install"
aws-cdk = { call="infrastructure.app" }

# build config

[tool.hatch.build.targets.wheel]
packages = [
    "src/object_ci",
]

# linting/formatting

[tool.ruff]
preview = true
extend-exclude = [
    "**/venv",
    "**/.*",
    "**/node_modules",
    "**/__pycache__",
]

[tool.ruff.lint]
preview = true
extend-select = [
    "I", # import sorting
    "RUF022", # __all__ sorting
]
extend-ignore = [
    # covered by Pyright
    "F821", # undefined variable
    "F401", # imported but unused
    "F841", # unused variable
]

[tool.ruff.lint.isort]
combine-as-imports = true
known-first-party = [
    "object_ci",
]

# type checking

[tool.pyright]
pythonVersion = "3.11"
pythonPlatform = "All"

include = [
    "src",
    "test",
]
exclude = [
    "**/venv",
    "**/.*",
    "**/node_modules",
    "**/__pycache__",
]

typeCheckingMode = "basic"

enableExperimentalFeatures = true
strictDictionaryInference = true
strictListInference = true
strictSetInference = true

reportAssertAlwaysTrue = "error"
reportConstantRedefinition = "error"
reportDeprecated = "error"
reportFunctionMemberAccess = "error"
reportIncompatibleMethodOverride = "error"
reportIncompatibleVariableOverride = "error"
reportIncompleteStub = "error"
reportInconsistentConstructor = "error"
reportInvalidStringEscapeSequence = "error"
reportInvalidStubStatement = "error"
reportInvalidTypeVarUse = "error"
reportMatchNotExhaustive = "error"
reportMissingParameterType = "error"
reportOverlappingOverload = "error"
reportSelfClsParameterName = "error"
reportTypeCommentUsage = "error"
reportUnknownParameterType = "error"
reportUnnecessaryCast = "error"
reportUnnecessaryContains = "error"
reportUnsupportedDunderAll = "error"
reportUntypedBaseClass = "error"
reportUntypedClassDecorator = "error"
reportUntypedFunctionDecorator = "error"
reportUntypedNamedTuple = "error"
reportWildcardImportFromLibrary = "error"

reportImplicitOverride = "warning"
reportMissingTypeArgument = "warning"
reportPrivateUsage = "warning"
reportUnknownArgumentType = "warning"
reportUnknownLambdaType = "warning"
reportUnknownMemberType = "warning"
reportUnknownVariableType = "warning"
reportUnnecessaryComparison = "warning"
reportUnnecessaryIsInstance = "warning"
reportUnusedClass = "warning"
reportUnusedExpression = "warning"
reportUnusedFunction = "warning"
reportUnusedImport = "warning"
reportUnusedVariable = "warning"

reportMissingTypeStubs = "none"
reportDuplicateImport = "none"
